Layout fixar klart, allt e mindre så vi får plats med mer grejor wooo (#66)
* första utkast feeback från skapat ärende

* Here we go

* Snälla funka

* Kom igen

* Mario

* Fixed some layout problems

* Layout fixes done, here we go

* Some problems when rebasing, should be fixed.

* första utkast feeback från skapat ärende

* Here we go

* Snälla funka

* Kom igen

* Mario

* Fixed some layout problems

* Layout fixes done, here we go

* Some problems when rebasing, should be fixed.

* Rebase done, should now be ready to merge

* Fixed search bar, was too big

---------

--- a/frontend-friends/src/components/sidebar/sidebar.scss
+++ b/frontend-friends/src/components/sidebar/sidebar.scss
@@ -1,4 +1,5 @@
 @use '../../style/colors';
+@use '../../style/fontsizes.scss';
 
 .collapsed-sidebar .sidebar-container{
     width: 80px;
@@ -28,7 +29,7 @@
 
     .input-link{
         .navigation-link{
-            width: 50px;
+            width: 48px;
 
             .nav-text{
                 display: none;
@@ -46,7 +47,7 @@
     flex-direction: column;
     overflow: hidden;
     background-color: #fff;
-    width: 260px;
+    width: 220px;
     height: 100%;
     min-height: 370px;
     padding: 1em;
@@ -67,7 +68,7 @@
         width: auto;
         overflow: hidden;
         svg{
-            height: 20px;
+            height: 18px;
             flex-shrink: 0;
             display: block;
         }
@@ -90,7 +91,7 @@
 
     li, .navigation-link{
         color: colors.$grey-text;
-        font-size: 20px;
+        font-size: fontsizes.$fontsz-h2;
     }
 
 
@@ -105,8 +106,8 @@
         justify-content: flex-start;
         padding: 0.5em 1em;
         border-radius: 6px;
-        font-size: 20px;
-        height: 28px;
+        font-size: fontsizes.$fontsz-h3;
+        height: 32px;
         margin: 0.2em auto;
         gap: 0 1em;
     }
@@ -115,8 +116,8 @@
     .navigation-link svg{
         flex-shrink: 0;
         transition: none;
-        height: 20px;
-        width: 20px;
+        height: 18px;
+        width: 18px;
     }
 
     .input-link{
@@ -128,8 +129,8 @@
             background-color: colors.$primary-color;
             color: white;
             transition: background-color 0.4s;
-            height: 50px;
-            width: 220px;
+            height: 48px;
+            width: 188px;
             padding: 0;
             margin: 0;
             align-self: center;
@@ -164,6 +165,7 @@
 
     .active{
         color: colors.$primary-color;
+        font-weight: 500;
     }
 
     .nav-text{
@@ -182,12 +184,14 @@
     
     button {
         position:absolute;
+        text-transform: uppercase;
         background-color: colors.$primary-color;
+        font-size: fontsizes.$fontsz-sm;
         font-weight: 600;
         color: white;
         text-align: center;
-        width: 150px;
-        height: 50px;
+        width: 60%;
+        height: 45px;
         border-radius: 6px;
         cursor: pointer;
         transition: 0.4s;
@@ -231,7 +235,7 @@
 
         .input-link{
             .navigation-link{
-                width: 50px;
+                width: 48px;
 
                 .nav-text{
                     display: none;
